# churros-ntfy

./: README.md  churros_ntfy.opam  dune-project  flake.nix  overlay.nix  websocket.nix
lib/autopush-ws/: autopush_ws.ml  autopush_ws.mli  dune
lib/json/: dune  json.ml  lexer.ml  parser.mly
lib/notif/: dune  notif.ml  notif.mli  parser.mly
lib/requests/: dune  requests.ml  requests.mli
